Fix: include bottom spacing in the case 1 module

--- a/src/templates/module_24_case1/styles.less
+++ b/src/templates/module_24_case1/styles.less
@@ -1,5 +1,5 @@
 .mod-case1 {
-	padding: @s2-moduleGap-s;
+	padding: @s2-moduleGap-s @s2-moduleGap-s @s2-moduleGap-s-3;
 	background-color: @s2-white;
 
 	&.gradient {
@@ -29,7 +29,7 @@
 	}
 
 	@media @s2-mq-window-tablet {
-		padding: @s2-moduleGap-m;
+		padding: @s2-moduleGap-m @s2-moduleGap-m @s2-moduleGap-m-3;
 
 		.h2-2 {
 			margin-bottom: @s2-moduleGap-m;
@@ -54,7 +54,7 @@
 	}
 
 	@media @s2-mq-window-desktop {
-		padding: @s2-moduleGap-l;
+		padding: @s2-moduleGap-l @s2-moduleGap-l @s2-moduleGap-l-3;
 
 		.h2-2 {
 			padding: 0;
